--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,11 @@
     <string name="start_game">Start game</string>
     <string name="city_game">City Game</string>
     <string name="theme" >Theme</string>
+    <string name="remove">Usuń</string>
+    <string name="delete_acc_for_sure">Na pewno chcesz usunąć\n swoje konto?</string>
+    <string name="delete_data_for_sure">Na pewno chcesz usunąć \nwszystkie dane z aplikacji?</string>
+    <string name="location_tracking">Śledzenie lokalizacji</string>
+    <string name="checking_for_back_loc_track">Sprawdzanie lokalizacji w tle</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
