--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -61,15 +61,15 @@
     <string name="latitude">Szerokość:</string>
     <string name="longitude">Długość:</string>
     <string name="list_of_places">Lista miejsc</string>
-    <string name="permissions">Uprawienia</string>
+    <string name="permissions">Uprawnienia</string>
     <string name="location">Lokalizacja</string>
     <string name="contacts">Kontakty</string>
-    <string name="if_you_want_to_deny_a_permission_you_need_to_go_to">Jeśli chcesz odmówić pozwolenia, musisz przejść do:</string>
-    <string name="settings_apps_remloc_permissions"><![CDATA[Ustawienia > Aplikacje > RemLoc > Pozwolenia]]></string>
+    <string name="if_you_want_to_deny_a_permission_you_need_to_go_to">Jeśli chcesz odmówić uprawnienia, musisz przejść do:</string>
+    <string name="settings_apps_remloc_permissions"><![CDATA[Ustawienia > Aplikacje > RemLoc > Uprawnienia]]></string>
     <string name="delete_all_data_from_app">Usuń wszystkie dane z aplikacji</string>
     <string name="label">Nazwa miejsca</string>
     <string name="use_the_default_value">Użyj wartości domyślnej</string>
-    <string name="cancel">Anulować</string>
+    <string name="cancel">Anuluj</string>
     <string name="ok">Ok</string>
     <string name="success" >Miejsce dodane</string>
     <string name="failed_to_upd_data">Nie udało się zaktualizować danych</string>
@@ -116,7 +116,12 @@
     <string name="miejsce">Miejsce №</string>
     <string name="please_wait">Proszę czekać, może to potrwać kilka sekund...</string>
     <string name="welcome_to">Witamy w</string>
-    <string name="start_game">Uruchomić grę</string>
+    <string name="start_game">Uruchom grę</string>
     <string name="city_game">Grze Miejskiej</string>
     <string name="theme" >Temat</string>
+    <string name="remove">Usuń</string>
+    <string name="delete_acc_for_sure">Na pewno chcesz usunąć\n swoje konto?</string>
+    <string name="delete_data_for_sure">Na pewno chcesz usunąć \nwszystkie dane z aplikacji?</string>
+    <string name="location_tracking">Śledzenie lokalizacji</string>
+    <string name="checking_for_back_loc_track">Sprawdzanie lokalizacji w tle</string>
 </resources>
