--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -129,4 +129,6 @@
     <string name="location_tracking__">Отслеживание местоположения...</string>
     <string name="notifiaction_location">Местоположение отслеживается, его можно отключить в приложении!</string>
     <string name="account_settings">Настройки аккаунта</string>
+    <string name="want_to_create_your_own_game">Хотите создать свою игру?</string>
+    <string name="create">Создавать</string>
 </resources>
